--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,11 @@
   "name": "Calendar Chrome Extension",
   "description": "This is a chrome extension for formatting google calendar invites",
   "version": "1.0",
+  "background": {
+    "scripts": ["background.js"]
+  },
   "browser_action": {
-      "default_title": "Click me",
-      "default_popup": "index.html"
+      "default_title": "Click me"
   },
   "permissions": [
       "tabs",
