--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,11 @@
   "browser_action": {
       "default_title": "Click me"
   },
+  "icons": {
+    "16": "assets/images/icon16.png",
+    "48": "assets/images/icon48.png",
+    "128": "assets/images/icon128.png"
+  },
   "permissions": [
       "tabs",
       "http://*/*",
