--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,13 @@
   "name": "Calendar Chrome Extension",
   "description": "This is a chrome extension for formatting google calendar invites",
   "version": "1.0",
+  "content_scripts": [
+    {
+      "matches": ["*://*/*"],
+      "run_at": "document_start",
+      "js": ["popup.js"]
+    }
+  ],
   "browser_action": {
       "default_title": "Click me",
       "default_popup": "popup.html"
